Change rating values
Values of rating changed from a scale from 0 to 5 with step 0.5 to 1 to 10 with step 1

--- a/templates/district_results.html
+++ b/templates/district_results.html
@@ -14,7 +14,8 @@
             {% for restaurante in mejores_restaurantes %}
                 <li>
                     <strong>Restaurante:</strong> {{ restaurante._id }}<br>
-                    <strong>Calificación promedio:</strong> {{ restaurante.average_rating }}
+                    <strong>Calificación promedio:</strong> {{ restaurante.average_rating }}<br>
+                    <strong>Cantidad visitas:</strong> {{ restaurante.count_visits }}
                 </li>
             {% endfor %}
         </ul>
