--- a/templates/place_results.html
+++ b/templates/place_results.html
@@ -11,7 +11,7 @@
             {% for review in reviews %}
                 <li class="review-item">
                     <strong>Location:</strong> {{ review.location }}<br>
-                    <strong>Rating:</strong> {{ review.rating }}<br>  <!-- Corregido: Acceder al campo 'rating' directamente -->
+                    <strong>Rating:</strong> {{ review.rating }}<br>
                     <strong>Date of Visit:</strong> {{ review.visit_date }}<br>
                     <strong>Comment:</strong> {{ review.comment }}
                 </li>
